# first-llm-classifier

./: .pre-commit-config.yaml  CONTRIBUTING.md  Makefile  Moley_llm classifier.ipynb  Pipfile  README.md  download.ipynb  first llm classifier_notebook.ipynb  first-llm-classifer.txt  pyproject.toml
.github/workflows/: docs.yaml
_notebooks/: Untitled.ipynb  calaccess.ipynb  classify.ipynb  classify_wells_ver.ipynb  download.ipynb  explore.ipynb  payees.csv  sample.csv
docs/: about.md  bulk-prompts.md  compare.md  conf.py  evaluate.md  groq.md  improve.md  index.md  jupyter-desktop.md  llm-wtf.md  our-mission.md  prompting-with-python.md  structured-responses.md  why-llm.md
docs/_static/: custom.css
