[build-system]
requires = ["setuptools >= 61.0",]
build-backend = "setuptools.build_meta"

[project]
name = "first-llm-classifier"
description = "Learn how journalists use large-language models to organize and analyze massive datasets"
version = "1.0.0"
requires-python = "==3.12.*"
dependencies = [
    "sphinx",
    "sphinx-autobuild",
    "myst-parser",
    "sphinx-palewire-theme",
    "pandas",
    "altair",
    "jupyterlab",
    "geopandas",
]

[project.optional-dependencies]
mypy = [
    "mypy",
]

[tool.setuptools]
packages = ["docs",]
